--- a/index.html
+++ b/index.html
@@ -4,29 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>あなたの名前</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css"> 
+</head>
 <body>
     <header>
-        <h1>あなたの名前</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Publication</a></li>
-                <li><a href="#">Research</a></li>
-                <li><a href="#">Activity</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><h1>Ryo Tatsumi<h1></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="publication.html">Publication</a></li>
+                <li><a href="activity.html">Activity</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <div class="image-container">
+      　　　<img src="image/IMG_2002.jpg" alt="丸い画像">
+    　　</div>
+        <h2>Ryo Tatsumi</h2>
+        <a href="https://web.tohoku.ac.jp/matsueda/" target="_blank">Matsueda group, Univ. of Tohoku</a>
+        <br>
+        <div class="arXiv-image">
+      　　　 <a href="https://orcid.org/0009-0005-2300-1334" target="_blank"><img src="image/orcid.logo.icon.svg" alt="orcId_logo"></a>
+            <a href="https://arxiv.org/search/?query=Tatsumi%2C+Ryo&searchtype=all&abstracts=show&order=-announced_date_first&size=50" target="_blank"><img src="image/arXiv_logo.jpeg" alt="arXiv_logo"></a>
+            <a href="https://scholar.google.com/citations?user=c165YBwAAAAJ&hl=ja" target="_blank"><img src="image/google_scholar.png" alt="orcId_logo"></a>
+    　　</div>
+        <h3>About Me</h3>
+
+        <p>東北大学 工学研究科 応用物理学専攻 松枝研究室修士2年の辰巳僚です。
+        <br>古典および量子スピン系を舞台に力学系理論や量子情報理論を用いてその性質を研究しています。
+        </p>
         <section>
-            <p>あなたの自己紹介やプロフィールなどを記述します。</p>
+            <p><b>Keyword</b>
+            <ul>
+                <li>Nonlinear dynamics</li>
+                <li>Quantum metrology</li>
+                <li>Spintronics</li>
+                <li>Quantum chaos</li>
+            </p>
+        </section>
+                <section>
+            <p><b>Education</b>
+            <ul>
+                <li>2024.4 - 現在:  東北大学 工学研究科 応用物理学専攻 修士課程</li>
+                <li>2020.4 - 2024.3:  東北大学 工学部 電気情報物理工学科 卒業</li>
+            </p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; あなたの名前</p>
+        <p>&copy; 2025 Ryo Tatsumi</p>
     </footer>
 </body>
 </html>
