--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><h1><a href="index.html">Ryo Tatsumi</a></h1></li>
+                <li><h1>Ryo Tatsumi</h1></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="publication.html">Publication</a></li>
                 <li><a href="activity.html">Activity</a></li>
