--- a/activity.html
+++ b/activity.html
@@ -42,7 +42,7 @@
                 <li>
                     <strong>Anharmonic potential induced chaotic dynamics of spintronic oscillator</strong><br> 
                      2025 Joint MMM-Intermag Conference, Hyatt Regency New Orleans, Jun 16 2025<br>
-                    <small><b>Ryo Tatsumi</b> Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
+                    <small><u>Ryo Tatsumi</u> Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
                 </li>
                 <li>
                     </li>
