--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li>
                         <div class="publication-details">
-                            <img src="image/homepage.png" alt="Publication Thumbnail 1" class="publication-thumbnail">
+                            <a href="https://doi.org/10.1103/PhysRevE.111.064202" target="_blank"><img src="image/homepage.png" alt="Publication Thumbnail 1" class="publication-thumbnail"></a>
                             <div class="publication-text">
                                 <p><strong>Chaotic magnetization dynamics in magnetic Duffing oscillator</strong><br>
                                 Authors: Ryo Tatsumi, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda<br>
