--- a/publication.html
+++ b/publication.html
@@ -31,7 +31,7 @@
                             <a href="https://doi.org/10.1103/PhysRevE.111.064202" target="_blank"><img src="image/homepage.png" alt="Publication Thumbnail 1" class="publication-thumbnail"></a>
                             <div class="publication-text">
                                 <p><strong>Chaotic magnetization dynamics in magnetic Duffing oscillator</strong><br>
-                                Authors: Ryo Tatsumi, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda<br>
+                                Authors: <u>Ryo Tatsumi</u>, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda<br>
                                 Phys. Rev. E <b>111</b>, 064202 (2025)<br>
                                 <a href="https://arxiv.org/pdf/2506.02762" target="_blank">[PDF]</a>
                                 <a href="https://doi.org/10.1103/PhysRevE.111.064202" target="_blank">[DOI]</a>
