--- a/activity.html
+++ b/activity.html
@@ -53,7 +53,7 @@
             <h3>Fellowships and Awards</h3>
             <ul class="activity-list">
                 <li>
-                    The Graduate Program in Spintronics (GP-Spin), University of Tohoku<br>
+                    The Graduate Program in Spintronics (GP-Spin), Tohoku University<br>
                     <small>Apr. 2025 - Mar. 2026.</small>
                 </li>
 
