--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>あなたの名前</title>
+    <title>Siuuuuu</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
