--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siuuuuu</title>
+    <title>Ryo Tatsumi</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -15,6 +15,7 @@
                 <li><a href="publication.html">Publication</a></li>
                 <li><a href="activity.html">Activity</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                
             </ul>
         </nav>
     </header>
