--- a/activity.html
+++ b/activity.html
@@ -27,22 +27,27 @@
                 <li>
                     <strong>Chaotic dynamics of spintronic oscillator with tunable anharmonic potential</strong><br> 
                     第85回応用物理学会秋季学術公演会, 万代島ビル, Sep 17, 2024<br>
-                    <small><u>Ryo Tatsumi</u> Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
+                    <small><u>Ryo Tatsumi</u>, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
                 </li>
                 <li>
                     <strong>Chaotic behaviors of spin-torque ferromagnetic resonance in the presence of tunable anharmonic potential</strong><br> 
                     CRCGP-MSSP 2024, Tohoku University, Nov 20, 2024<br>
-                    <small><u>Ryo Tatsumi</u> Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
+                    <small><u>Ryo Tatsumi</u>, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
                 </li>
                 <li>
                     <strong>スピントルク強磁性共鳴における非線形磁化ダイナミクスの理論</strong><br> 
-                    第85回応用物理学会秋季学術公演会, 万代島ビル, Sep 17, 2024<br>
+                    応用物理学会東北支部 第79回学術公演会, 東北大学, Dec 6, 2024<br>
                     <small><u>辰巳僚</u>, 千葉貴裕, 小峰啓史, 松枝宏明</small>
                 </li>
                 <li>
                     <strong>Anharmonic potential induced chaotic dynamics of spintronic oscillator</strong><br> 
                      2025 Joint MMM-Intermag Conference, Hyatt Regency New Orleans, Jun 16 2025<br>
-                    <small><u>Ryo Tatsumi</u> Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
+                    <small><u>Ryo Tatsumi</u>, Takahiro Chiba, Takashi Komine, and Hiroaki Matsueda </small>
+                </li>
+                <li>
+                    <strong>熱揺らぎを伴う磁気トンネル接合におけるカオス的磁化ダイナミクスの電流制御</strong><br> 
+                     日本物理学会第80回年次大会, 広島大学, Sep 16, 2025<br>
+                    <small><u>辰巳僚</u>, 松枝宏明, 千葉貴裕 </small>
                 </li>
                 <li>
                     </li>
