--- a/activity.html
+++ b/activity.html
@@ -25,6 +25,11 @@
             <h3>Conference Presentations</h3>
             <ul class="activity-list">
                 <li>
+                    <strong>準位反発を示す2準位系における量子推定</strong><br> 
+                     第53回量子情報技術研究会 (QIT53), NTT厚木研究開発センタ, Dec 2, 2025<br>
+                    <small><u>辰巳僚</u>, Le Bin Ho, 松枝宏明 </small>
+                </li>
+                <li>
                     <strong>熱揺らぎを伴う磁気トンネル接合におけるカオス的磁化ダイナミクスの電流制御</strong><br> 
                      日本物理学会第80回年次大会, 広島大学, Sep 16, 2025<br>
                     <small><u>辰巳僚</u>, 松枝宏明, 千葉貴裕 </small>
