--- a/activity.html
+++ b/activity.html
@@ -25,6 +25,11 @@
             <h3>Conference Presentations</h3>
             <ul class="activity-list">
                 <li>
+                    <strong>室温動作を想定した磁気トンネル接合における電流制御可能なカオス的磁化ダイナミクス</strong><br> 
+                     応用物理学会東北支部 第79回学術公演会, ホテルサンピア山形, Dec 4, 2025<br>
+                    <small><u>辰巳僚</u>, 三輪 真嗣, 松枝 宏明, 千葉 貴裕</small>
+                </li>
+                <li>
                     <strong>準位反発を示す2準位系における量子推定</strong><br> 
                      第53回量子情報技術研究会 (QIT53), NTT厚木研究開発センタ, Dec 2, 2025<br>
                     <small><u>辰巳僚</u>, Le Bin Ho, 松枝宏明 </small>
